Fixed unneeded overflow x
`overflow` property adds an empty scrollbar (from left to right). I replaced it with `overflow-y`

--- a/resources/css/toc.css
+++ b/resources/css/toc.css
@@ -12,7 +12,7 @@ TOC BLOCK
   top: var(--header-height);
   bottom: 0;
   width: var(--toc-width);
-  overflow: scroll;
+  overflow-y: scroll;
   border-left: 1px solid var(--lighter-gray);
 }
 
